
2020-03-27  Simon Sobisch <simonsobisch@gnu.org>

	* config.def, typeck.c: switched "select-working" to support option,
	  deactivated it (see bug #421)

2020-03-01  Brian Tiffin <btiffin@gnu.org>

	* cobc.c: bug #618, fix -j mode with -o name that includes a directory
				and when multiple inputs are involved in a compile pass

2020-02-13  Simon Sobisch <simonsobisch@gnu.org>

	* sqlxfdgen.c (output_xfd_file): fixed typo leading to broken reference
	* codegen.c: cleanup for output_line_and_trace_info

2020-02-12  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Generate more database independent SQL column types
	* codegen.c: Check for $XFD ALL being set which indicates that
				all files are being defined for SQL use
				Only emit filename.xd for INDEXED and RELATIVE files

2020-02-10  Ron Norman <rjn@inglenet.com>

	* cobc.c, cobc.h, codegen.c, help.c, warning.def: 
		Add new define CB_ERRWARNDEF

2020-02-09  Simon Sobisch <simonsobisch@gnu.org>

	* flag.def: adjusted some definitions CB_FLAG_RQ->CB_FLAG_NQ

2020-02-09  Ron Norman <rjn@inglenet.com>

	* cobc.c, codegen.c, typeck.c, sysdefines.h, warning.def: FR #117
	  report when the COBOL code is using a feature which GnuCOBOL was not
	  configured to support;
	  -Wunsupported  is set to 'error' by default but can be downgraded
	  warning/error is given for unsupported use of
	    XML, JSON, file with ORGANIZATION INDEXED, extended screen-io

2020-02-05  Ron Norman <rjn@inglenet.com>

	* codegen.c: emit warning if ORANIZATION INDEXED used but not supported
	* typeck.c: emit warning if XML or JSON used but not supported

2020-02-02  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, cobc.h: added check for COB_UNIX_LF again,
	  externalized cb_unix_lf for use in sqlxfdgen.c
	* parser.y, ppparse.y: removed support for Bison < 3,
	  fixing deprecation warnings

2020-01-28  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c, typeck.c: update to avoid C compile warnings